assets/sass/includes/parts/_jobs.scss
.page-template-page-jobs {
    .module-page>div:first-child {
        max-width: unset;
        padding: 0;
    }
}

.jobs {
    &__title {
        h2 {
            font-weight: 750;
            font-size: 35px;
            line-height: 103%;
            color: $darkBlue;
        }
        p {
            font-weight: normal;
            font-size: 14px;
            line-height: 21px;
            color: black;
        }
    }
    &__container {
        padding: 24px 0;
        background-color: $lightGray;
        &__single {
            background-color: white;
            border: 1px solid rgba(210, 213, 219, 0.35);
            box-sizing: border-box;
            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.07);
            &__data {
                &__img {
                    border: 1px solid $lightGray;
                    box-sizing: border-box;
                    border-radius: 4px;
                    padding: 25px;
                }
                .job__name {
                    font-style: normal;
                    font-weight: normal;
                    font-size: 12px;
                    line-height: 152.9%;
                    color: $darkBlue;
                }
                .job__title {
                    font-style: italic;
                    font-weight: 750;
                    font-size: 20px;
                    line-height: 103%;
                    color: $darkBlue;
                }
                .job__locationPrice {
                    svg {
                        height: 14px;
                        width: 14px;
                    }
                    p {
                        margin-left: 14px;
                        font-style: normal;
                        font-weight: bold;
                        font-size: 12px;
                        line-height: 152.9%;
                        color: $lightBlue;
                    }
                }
            }
            &__text {
                &__desc {
                    font-size: 14px;
                    line-height: 19px;
                }
                &__sub {
                    font-size: 12px;
                    margin-bottom: 5px !important;
                }
            }
        }
    }
    &__otherDetails {
        &__single {
            svg {
                height: 14px;
                width: 14px;
            }
            p {
                margin-left: 14px !important;
                font-weight: normal;
                font-size: 12px;
                line-height: 152.9%;
                color: $lightBlue;
            }
        }
    }
    &__filters {
        &__select {
            font-weight: normal;
            font-size: 12px;
            color: black;
            select {
                padding: 11px 20px;
                background: $lightGray;
                border-radius: 4px;
                margin-right: 7px;
                border: none;
                width: 100%;
                font-weight: bold;
                font-size: 14px;
                color: black;
            }
        }
        &__submit {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 12%;
            }
            button,
            input {
                background: none;
                border: none;
            }
            input {
                font-family: $font-family-base;
                color: white;
                font-style: italic;
                font-weight: 750;
                font-size: 14px;
                line-height: 17px;
                text-align: center;
                color: $starOrange;
            }
        }
        &__location {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 22%;
            }
        }
        &__position {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 22%;
            }
        }
        &__hours {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 22%;
            }
        }
        &__salary {
            flex-basis: 100%;
            @include mq(laptop) {
                flex-basis: 22%;
            }
        }
    }
}

